--- a/index.html
+++ b/index.html
@@ -1,25 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
-</head>
-<body>
-    
-</body>
-</html>
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>مدبّر | إدارة أموالك بذكاء</title>
+    <link rel="icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
+  </head>
+  <body>
+    <div class="dashboard">
+      <!-- sidebar -->
+      <div class="sidebar">
+        <div class="container">
+          <!-- #1 icon & logo -->
+          <div class="item flex gap-16">
+            <!-- icon -->
+            <div class="icon">
+              <img src="images/icons/coins-solid-full.png" alt="" />
+            </div>
 
-<!-- 
-git init
-git config --global user.name "MohamedSaadat"
-git config --global user.email "mohamedgitsaadat@gmail.com"
-git remote add origin https://github.com/MohamedSaadat/Mudabbir---Financial-Dashboard.git                  
-git add .
-git commit -m "initial commit"
-git log
-git push origin master
-git pull origin master 
--->
+            <!-- logo -->
+            <div class="logo">
+              <h1 class="f36 w700">مدبّر</h1>
+              <span class="f14 w600 gray">إدارة أموالك بذكاء</span>
+            </div>
+          </div>
+
+          <!-- #2 navbar -->
+          <nav>
+            <ul>
+              <li class="link-1 flex gap-16 w600">
+                <div class="icon">
+                  <img src="images/icons/house-solid-full.png" alt="" />
+                </div>
+                <span class="blue">الصفحة الرئيسية</span>
+              </li>
+              <li class="link-2 flex gap-16 w600">
+                <div class="icon">
+                  <img
+                    src="images/icons/arrow-right-arrow-left-solid-full.png"
+                    alt=""
+                  />
+                </div>
+                <span class="gray">المعاملات</span>
+              </li>
+              <li class="link-3 flex gap-16 w600">
+                <div class="icon">
+                  <img src="images/icons/chart-pie-solid-full.png" alt="" />
+                </div>
+                <span class="gray">الميزانيات</span>
+              </li>
+              <li class="link-4 flex gap-16 w600">
+                <div class="icon">
+                  <img src="images/icons/piggy-bank-solid.png" alt="" />
+                </div>
+                <span class="gray">المدخرات</span>
+              </li>
+              <li class="link-5 flex gap-16 w600">
+                <div class="icon">
+                  <img
+                    src="images/icons/file-invoice-dollar-solid-full.png"
+                    alt=""
+                  />
+                </div>
+                <span class="gray">الفواتير الشهرية</span>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+
+      <!-- finance-manager -->
+      <main class="finance-manager">
+        <!-- header -->
+        <header>
+          <div class="container">
+            <!-- icon & logo & state -->
+            <div></div>
+
+            <!-- user & search & notification -->
+            <div></div>
+          </div>
+        </header>
+      </main>
+    </div>
+  </body>
+</html>
