sidebar is done

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <div class="sidebar">
         <div class="container">
           <!-- #1 icon & logo -->
-          <div class="item flex gap-16">
+          <div class="logo flex gap-16">
             <!-- icon -->
             <div class="icon">
               <img src="images/icons/coins-solid-full.png" alt="" />
             </div>
 
-            <!-- logo -->
-            <div class="logo">
+            <!-- text -->
+            <div>
               <h1 class="f36 w700">مدبّر</h1>
               <span class="f14 w600 gray">إدارة أموالك بذكاء</span>
             </div>
@@ -30,44 +30,75 @@
           <!-- #2 navbar -->
           <nav>
             <ul>
-              <li class="link-1 flex gap-16 w600">
+              <li class="link-active flex gap-16">
                 <div class="icon">
                   <img src="images/icons/house-solid-full.png" alt="" />
                 </div>
-                <span class="blue">الصفحة الرئيسية</span>
+                <span class="blue w600">الصفحة الرئيسية</span>
               </li>
-              <li class="link-2 flex gap-16 w600">
+              <li class="link flex gap-16">
                 <div class="icon">
                   <img
                     src="images/icons/arrow-right-arrow-left-solid-full.png"
                     alt=""
                   />
                 </div>
-                <span class="gray">المعاملات</span>
+                <span class="gray w600">المعاملات</span>
               </li>
-              <li class="link-3 flex gap-16 w600">
+              <li class="link flex gap-16">
                 <div class="icon">
                   <img src="images/icons/chart-pie-solid-full.png" alt="" />
                 </div>
-                <span class="gray">الميزانيات</span>
+                <span class="gray w600">الميزانيات</span>
               </li>
-              <li class="link-4 flex gap-16 w600">
+              <li class="link flex gap-16">
                 <div class="icon">
                   <img src="images/icons/piggy-bank-solid.png" alt="" />
                 </div>
-                <span class="gray">المدخرات</span>
+                <span class="gray w600">المدخرات</span>
               </li>
-              <li class="link-5 flex gap-16 w600">
+              <li class="link flex gap-16">
                 <div class="icon">
                   <img
                     src="images/icons/file-invoice-dollar-solid-full.png"
                     alt=""
                   />
                 </div>
-                <span class="gray">الفواتير الشهرية</span>
+                <span class="gray w600">الفواتير الشهرية</span>
               </li>
             </ul>
           </nav>
+
+          <!-- #3 quick-actions -->
+          <div class="quick-actions">
+            <h3 class="gray f14 w600">إجراءات سريعة</h3>
+            <ul>
+              <li class="link flex gap-16">
+                <div class="icon flex-center bg-light-blue">
+                  <img src="images/icons/paper-plane-solid-full.png" alt="" />
+                </div>
+                <span class="gray f14 w500">إرسال أموال</span>
+              </li>
+              <li class="link flex gap-16">
+                <div class="icon flex-center bg-light-green">
+                  <img src="images/icons/plus-solid-full.png" alt="" />
+                </div>
+                <span class="gray f14 w500">إضافة أموال</span>
+              </li>
+              <li class="link flex gap-16">
+                <div class="icon flex-center bg-light-purple">
+                  <img src="images/icons/receipt-solid-full.png" alt="" />
+                </div>
+                <span class="gray f14 w500">دفع فاتورة</span>
+              </li>
+              <li class="link flex gap-16">
+                <div class="icon flex-center bg-light-orange">
+                  <img src="images/icons/chart-line-solid-full.png" alt="" />
+                </div>
+                <span class="gray f14 w500">استثمار</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
