--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="sidebar">
         <div class="container">
           <!-- #1 icon & logo -->
-          <div class="logo flex gap-16">
+          <div class="logo">
             <!-- icon -->
             <div class="icon">
               <img src="images/icons/coins-solid-full.png" alt="" />
@@ -30,13 +30,13 @@
           <!-- #2 navbar -->
           <nav>
             <ul>
-              <li class="link-active flex gap-16">
+              <li class="link-active">
                 <div class="icon">
                   <img src="images/icons/house-solid-full.png" alt="" />
                 </div>
                 <span class="blue w600">الصفحة الرئيسية</span>
               </li>
-              <li class="link flex gap-16">
+              <li class="link">
                 <div class="icon">
                   <img
                     src="images/icons/arrow-right-arrow-left-solid-full.png"
@@ -45,19 +45,19 @@
                 </div>
                 <span class="gray w600">المعاملات</span>
               </li>
-              <li class="link flex gap-16">
+              <li class="link">
                 <div class="icon">
                   <img src="images/icons/chart-pie-solid-full.png" alt="" />
                 </div>
                 <span class="gray w600">الميزانيات</span>
               </li>
-              <li class="link flex gap-16">
+              <li class="link">
                 <div class="icon">
                   <img src="images/icons/piggy-bank-solid.png" alt="" />
                 </div>
                 <span class="gray w600">المدخرات</span>
               </li>
-              <li class="link flex gap-16">
+              <li class="link">
                 <div class="icon">
                   <img
                     src="images/icons/file-invoice-dollar-solid-full.png"
@@ -73,26 +73,26 @@
           <div class="quick-actions">
             <h3 class="gray f14 w600">إجراءات سريعة</h3>
             <ul>
-              <li class="link flex gap-16">
-                <div class="icon flex-center bg-light-blue">
+              <li class="link">
+                <div class="icon bg-light-blue">
                   <img src="images/icons/paper-plane-solid-full.png" alt="" />
                 </div>
                 <span class="gray f14 w500">إرسال أموال</span>
               </li>
-              <li class="link flex gap-16">
-                <div class="icon flex-center bg-light-green">
+              <li class="link">
+                <div class="icon bg-light-green">
                   <img src="images/icons/plus-solid-full.png" alt="" />
                 </div>
                 <span class="gray f14 w500">إضافة أموال</span>
               </li>
-              <li class="link flex gap-16">
-                <div class="icon flex-center bg-light-purple">
+              <li class="link">
+                <div class="icon bg-light-purple">
                   <img src="images/icons/receipt-solid-full.png" alt="" />
                 </div>
                 <span class="gray f14 w500">دفع فاتورة</span>
               </li>
-              <li class="link flex gap-16">
-                <div class="icon flex-center bg-light-orange">
+              <li class="link">
+                <div class="icon bg-light-orange">
                   <img src="images/icons/chart-line-solid-full.png" alt="" />
                 </div>
                 <span class="gray f14 w500">استثمار</span>
@@ -107,11 +107,54 @@
         <!-- header -->
         <header>
           <div class="container">
-            <!-- icon & logo & state -->
-            <div></div>
+            <!-- icon & logo -->
+            <div class="logo">
+              <!-- icon -->
+              <div class="icon">
+                <img src="images/icons/coins-solid-full.png" alt="" />
+              </div>
+
+              <!-- text -->
+              <div>
+                <h1>مدبّر</h1>
+                <span class="w600 gray">إدارة أموالك بذكاء</span>
+              </div>
+
+              <!-- state -->
+              <div class="state">
+                <div></div>
+                <span>متصل</span>
+              </div>
+            </div>
 
             <!-- user & search & notification -->
-            <div></div>
+            <div class="user">
+              <div>
+                <!-- search -->
+                <div class="icon">
+                  <img
+                    src="images/icons/magnifying-glass-solid-full.png"
+                    alt=""
+                  />
+                </div>
+
+                <!-- notification -->
+                <div class="icon">
+                  <img src="images/icons/bell-regular-full.png" alt="" />
+                </div>
+              </div>
+
+              <!-- user -->
+              <div class="image">
+                <img src="images/avatar-1.jpg" alt="" />
+              </div>
+            </div>
+
+            <!-- state -->
+            <div class="state">
+              <div></div>
+              <span>متصل</span>
+            </div>
           </div>
         </header>
       </main>
