--- a/index.html
+++ b/index.html
@@ -107,21 +107,24 @@
         <!-- header -->
         <header>
           <div class="container">
-            <!-- icon & logo -->
+            <!-- logo -->
             <div class="logo">
-              <!-- icon -->
-              <div class="icon">
-                <img src="images/icons/coins-solid-full.png" alt="" />
-              </div>
+              <!-- icon & logo -->
+              <div class="flex align-end gap-16 m16">
+                <!-- icon -->
+                <div class="icon">
+                  <img src="images/icons/coins-solid-full.png" alt="" />
+                </div>
 
-              <!-- text -->
-              <div>
-                <h1>مدبّر</h1>
-                <span class="w600 gray">إدارة أموالك بذكاء</span>
+                <!-- text -->
+                <div>
+                  <h1>مدبّر</h1>
+                  <span>إدارة أموالك بذكاء</span>
+                </div>
               </div>
 
               <!-- state -->
-              <div class="state">
+              <div class="state-logo">
                 <div></div>
                 <span>متصل</span>
               </div>
@@ -145,13 +148,17 @@
               </div>
 
               <!-- user -->
-              <div class="image">
+              <div class="user-name">
+                <div class="name">
+                  <p>سيف أسامة</p>
+                  <p>حساب مميز</p>
+                </div>
                 <img src="images/avatar-1.jpg" alt="" />
               </div>
             </div>
 
             <!-- state -->
-            <div class="state">
+            <div class="state-header">
               <div></div>
               <span>متصل</span>
             </div>
