--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <main class="finance-manager">
         <!-- header -->
         <header>
-          <div class="container">
+          <div class="container card">
             <!-- logo -->
             <div class="logo">
               <!-- icon & logo -->
@@ -164,6 +164,44 @@
             </div>
           </div>
         </header>
+
+        <!-- summary-cards -->
+        <section class="summary-cards">
+          <div class="container">
+            <!-- Current balance -->
+            <div class="current-balance card">
+              <p>الرصيد الحالي</p>
+              <p>8,450 جنية</p>
+              <div>
+                <img src="images/icons/arrow-up.png" alt="" />
+                <p>+2.5%</p>
+              </div>
+            </div>
+
+            <!-- income -->
+            <div class="income card">
+              <p>الدخل</p>
+              <p>15,000 جنية</p>
+              <div>
+                <img src="images/icons/arrow-up.png" alt="" />
+                <p>+8.2%</p>
+              </div>
+            </div>
+
+            <!-- Expenses -->
+            <div class="expenses card">
+              <p>المصروفات</p>
+              <p>10,000 جنية</p>
+              <div>
+                <img src="images/icons/arrow-down.png" alt="" />
+                <p>-1.2%</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- dashboard-widgets -->
+        <section class="dashboard-widgets"></section>
       </main>
     </div>
   </body>
