--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>مدبّر | إدارة أموالك بذكاء</title>
     <link rel="icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
   </head>
@@ -170,38 +171,182 @@
           <div class="container">
             <!-- Current balance -->
             <div class="current-balance card">
-              <p>الرصيد الحالي</p>
-              <p>8,450 جنية</p>
+              <p class="f14 w600 gray">الرصيد الحالي</p>
+              <p class="f36 w700">8,450 جنية</p>
               <div>
                 <img src="images/icons/arrow-up.png" alt="" />
-                <p>+2.5%</p>
+                <p class="f14 w600 green">+2.5%</p>
               </div>
             </div>
 
             <!-- income -->
             <div class="income card">
-              <p>الدخل</p>
-              <p>15,000 جنية</p>
+              <p class="f14 w600 gray">الدخل</p>
+              <p class="f36 w700">15,000 جنية</p>
               <div>
                 <img src="images/icons/arrow-up.png" alt="" />
-                <p>+8.2%</p>
+                <p class="f14 w600 green">+8.2%</p>
               </div>
             </div>
 
             <!-- Expenses -->
             <div class="expenses card">
-              <p>المصروفات</p>
-              <p>10,000 جنية</p>
+              <p class="f14 w600 gray">المصروفات</p>
+              <p class="f36 w700">10,000 جنية</p>
               <div>
                 <img src="images/icons/arrow-down.png" alt="" />
-                <p>-1.2%</p>
+                <p class="f14 w600 red">-1.2%</p>
               </div>
             </div>
           </div>
         </section>
 
         <!-- dashboard-widgets -->
-        <section class="dashboard-widgets"></section>
+        <section class="dashboard-widgets">
+          <div class="container">
+            <!-- notifications -->
+            <div class="notifications card">
+              <h3>الأنشطة الحديثة</h3>
+
+              <!-- Activities List -->
+              <div class="activities-list">
+                <!-- activity #1 -->
+                <div class="activity">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img src="images/icons/user-plus-solid-full.png" alt="" />
+                  </div>
+
+                  <!-- text -->
+                  <div class="text">
+                    <div class="title">
+                      <h4 class="f14 w700">إنشاء حساب توفير جديد</h4>
+                      <span class="f12 w500 blue">حساب</span>
+                    </div>
+                    <p class="f12 w600 gray">
+                      تم إنشاء حساب توفير بنك الأهلي بنجاح
+                    </p>
+                    <span class="f12 w600 gray">منذ ساعة واحدة</span>
+                  </div>
+                </div>
+
+                <!-- activity #2 -->
+                <div class="activity">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img
+                      src="images/icons/credit-card-solid-full-green.png"
+                      alt=""
+                    />
+                  </div>
+
+                  <!-- text -->
+                  <div class="text">
+                    <div class="title">
+                      <h4 class="f14 w700">إضافة بطاقة جديدة</h4>
+                      <span class="f12 w500 green">بطاقة</span>
+                    </div>
+                    <p class="f12 w600 gray">
+                      تمت إضافة بطاقة Visa الجديدة ****2847
+                    </p>
+                    <span class="f12 w600 gray">منذ 3 ساعات</span>
+                  </div>
+                </div>
+
+                <!-- button -->
+                <div class="button">
+                  <a href="">عرض جميع الأنشطة (23)</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- income-vs-expenses -->
+            <div class="income-vs-expenses card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">المعاملات الأخيرة</h3>
+                <a href="" class="gray">
+                  <span>عرض الكل</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-- bills -->
+            <div class="bills card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">الفواتير الشهرية</h3>
+                <a href="" class="gray">
+                  <span>عرض الكل</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+
+              <!-- text -->
+              <div class="text">
+                <p class="f30 w700">1920 جنية</p>
+                <span class="f14 w600 gray">إجمالي الفواتير الشهرية</span>
+              </div>
+
+              <!-- items -->
+              <div class="items">
+                <!-- item #1 -->
+                <div class="item">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img src="images/icons/wifi-solid-full.png" alt="" />
+                  </div>
+                  <!-- text -->
+                  <div class="text">
+                    <span class="f12 w600 gray">إنترنت</span>
+                    <span class="w600">450 جنية</span>
+                    <span class="f12 w600 red">يستحق في 3 أيام</span>
+                  </div>
+                </div>
+                <!-- item #2 -->
+                <div class="item">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img src="images/icons/bolt-solid-full.png" alt="" />
+                  </div>
+                  <!-- text -->
+                  <div class="text">
+                    <span class="f12 w600 gray">كهرباء</span>
+                    <span class="w600">400 جنية</span>
+                    <span class="f12 w600 orang">يستحق في 5 أيام</span>
+                  </div>
+                </div>
+                <!-- item #3 -->
+                <div class="item">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img src="images/icons/phone-solid-full.png" alt="" />
+                  </div>
+                  <!-- text -->
+                  <div class="text">
+                    <span class="f12 w600 gray">هاتف</span>
+                    <span class="w600">290 جنية</span>
+                    <span class="f12 w600 green">يستحق في 10 أيام</span>
+                  </div>
+                </div>
+                <!-- item #4 -->
+                <div class="item">
+                  <!-- icon -->
+                  <div class="icon">
+                    <img src="images/icons/tv-solid-full-red.png" alt="" />
+                  </div>
+                  <!-- text -->
+                  <div class="text">
+                    <span class="f12 w600 gray">Netflix</span>
+                    <span class="w600">780 جنية</span>
+                    <span class="f12 w600 gray">يستحق في 15 أيام</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
