--- a/index.html
+++ b/index.html
@@ -270,6 +270,366 @@
                   <i class="fa-solid fa-chevron-left"></i>
                 </a>
               </div>
+
+              <!-- table -->
+              <table>
+                <!-- head -->
+                <thead>
+                  <tr>
+                    <th>المعاملة</th>
+                    <th>الفئة</th>
+                    <th>التاريخ</th>
+                    <th>الحالة</th>
+                    <th>المبلغ</th>
+                  </tr>
+                </thead>
+
+                <!-- body -->
+                <tbody>
+                  <!-- row #1 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="image">
+                        <img src="images/avatar-2.jpg" alt="" />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">محمود النجار</span>
+                        <span class="f12 w600 gray">تحويل اموال</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="icon">
+                          <img
+                            src="images/icons/arrow-down-solid-full.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 green">دخل</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">١٤ أكتوبر ٢٠٢٥</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600 green">+350 جنية</span>
+                    </td>
+                  </tr>
+                  <!-- row #2 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="icon bg-orange">
+                        <img
+                          src="images/icons/utensils-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">مطعم Meat moot</span>
+                        <span class="f12 w600 gray">دفع مطعم</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-orange">
+                        <span class="icon">
+                          <img
+                            src="images/icons/utensils-solid-full.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 orang">مطعم</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">14 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-2200 جنية </span>
+                    </td>
+                  </tr>
+                  <!-- row #3 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="icon bg-light-blue">
+                        <img
+                          src="images/icons/cart-shopping-solid-full-blue.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">مشتريات Amazon</span>
+                        <span class="f12 w600 gray">تسوق إلكتروني</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-light-blue">
+                        <span class="icon">
+                          <img
+                            src="images/icons/cart-shopping-solid-full-blue.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 blue">تسوق</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">13 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-1250 جنية </span>
+                    </td>
+                  </tr>
+                  <!-- row #4 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="image">
+                        <img src="images/avatar-1.jpg" alt="" />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">عمر المهدي</span>
+                        <span class="f12 w600 gray">دفع فاتورة مقسمة</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-purple">
+                        <span class="icon">
+                          <img src="images/icons/users-solid-full.png" alt="" />
+                        </span>
+                        <span class="f12 w500 purple">فاتورة مقسمة</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">13 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-1400 جنية </span>
+                    </td>
+                  </tr>
+                  <!-- row #5 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="image">
+                        <img src="images/avatar-3.jpg" alt="" />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">محمد عوض</span>
+                        <span class="f12 w600 gray">دفع عمل حر</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="icon">
+                          <img
+                            src="images/icons/briefcase-solid-full.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 green">عمل</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">12 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600 green">+2500 جنية</span>
+                    </td>
+                  </tr>
+                  <!-- row #6 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="icon bg-light-red">
+                        <img
+                          src="images/icons/gas-pump-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">محطة وقود Shell</span>
+                        <span class="f12 w600 gray">شراء وقود</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-light-red">
+                        <span class="icon">
+                          <img src="images/icons/car-solid-full.png" alt="" />
+                        </span>
+                        <span class="f12 w500 red">مواصلات</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">12 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-yellow">
+                        <span class="f12 w500 yellow">معلق</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-700 جنية</span>
+                    </td>
+                  </tr>
+                  <!-- row #7 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="icon bg-light-blue">
+                        <img
+                          src="images/icons/heart-solid-full-(2).png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">اشتراك Netflix</span>
+                        <span class="f12 w600 gray">اشتراك شهري</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-light-blue">
+                        <span class="icon">
+                          <img
+                            src="images/icons/tv-solid-full-violet.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 blue">ترفيه</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">11 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-780 جنية</span>
+                    </td>
+                  </tr>
+                  <!-- row #8 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="iconText">
+                      <div class="icon bg-green2">
+                        <img
+                          src="images/icons/dumbbell-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">نادي FitLife</span>
+                        <span class="f12 w600 gray">عضوية شهرية</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td>
+                      <div class="Pill bg-green2">
+                        <span class="icon">
+                          <img
+                            src="images/icons/heart-pulse-solid-full.png"
+                            alt=""
+                          />
+                        </span>
+                        <span class="f12 w500 green2">صحة</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="f14 w600 gray">10 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td>
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td>
+                      <span class="f14 w600">-500 جنية</span>
+                    </td>
+                  </tr>
+                  <!-- row #9 -->
+                  <tr>
+                    <!-- المعاملة -->
+                    <td class="last iconText">
+                      <div class="icon bg-green">
+                        <img
+                          src="images/icons/graduation-cap-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="text">
+                        <span class="f14 w500">كورس Jonas</span>
+                        <span class="f12 w600 gray">دورة تدريبية</span>
+                      </div>
+                    </td>
+                    <!-- الفئة -->
+                    <td class="last">
+                      <div class="Pill bg-green">
+                        <span class="icon">
+                          <img src="images/icons/book-solid-full.png" alt="" />
+                        </span>
+                        <span class="f12 w500 green">تعليم</span>
+                      </div>
+                    </td>
+                    <!-- التاريخ -->
+                    <td class="last f14 w600 gray">9 أكتوبر، 2025</td>
+                    <!-- الحالة -->
+                    <td class="last">
+                      <div class="Pill bg-green">
+                        <span class="f12 w500 green">مكتمل</span>
+                      </div>
+                    </td>
+                    <!-- المبلغ -->
+                    <td class="last">
+                      <span class="f14 w600">-250 جنية</span>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
 
             <!-- bills -->
@@ -342,6 +702,47 @@
                     <span class="w600">780 جنية</span>
                     <span class="f12 w600 gray">يستحق في 15 أيام</span>
                   </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- budget-overview-card -->
+            <div class="budget card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">نظرة عامة على الميزانية</h3>
+                <a href="" class="gray">
+                  <span>التفاصيل</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+
+              <!-- items -->
+              <div class="items">
+                <!-- item #1 -->
+                <div class="item">
+                  <div class="flex">
+                    <div>
+                      <p class="f14 w500 blue">إجمالي الميزانية</p>
+                      <p class="f24 w700 blue2">10000 جنية</p>
+                    </div>
+                    <div>
+                      <p class="f14 w500 gray">المتبقي</p>
+                      <p class="f18 w600 green">1750 جنية</p>
+                    </div>
+                  </div>
+                  <div class="flex">
+                    <span class="f12 w600 gray">المستخدم: 8250 جنية</span>
+                    <span class="f12 w600 gray">82.5%</span>
+                  </div>
+                  <div class="bg-gray width100">
+                    <div class="bg-blue width80"></div>
+                  </div>
+                </div>
+
+                <!-- item #2 -->
+                <div class="item hover">
+                  
                 </div>
               </div>
             </div>
