--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               </div>
             </div>
 
-            <!-- income-vs-expenses -->
-            <div class="income-vs-expenses card">
+            <!-- transactions -->
+            <div class="transactions card">
               <!-- title -->
               <div class="title">
                 <h3 class="f18 w600">المعاملات الأخيرة</h3>
@@ -742,7 +742,290 @@
 
                 <!-- item #2 -->
                 <div class="item hover">
-                  
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-blue">
+                        <img
+                          src="images/icons/heart-solid-full-(2).png"
+                          alt=""
+                        />
+                      </div>
+                      <div>
+                        <p class="f14 w500">ترفيه</p>
+                        <p class="f12 w600 gray">الميزانية: 1500 جنية</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">750 جنية</p>
+                        <div class="Pill bg-green m8">
+                          <span class="f12 w500 green">متبقي 50%</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bg-gray width100">
+                    <div class="bg-dark-orang width50"></div>
+                  </div>
+                </div>
+
+                <!-- item #3 -->
+                <div class="item hover">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-red">
+                        <img
+                          src="images/icons/file-invoice-dollar-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div>
+                        <p class="f14 w500">فواتير</p>
+                        <p class="f12 w600 gray">الميزانية: 2000 جنية</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">2000 جنية</p>
+                        <div class="Pill bg-light-red m8">
+                          <span class="f12 w500 red">مستخدم 100%</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bg-gray width100">
+                    <div class="bg-red width100"></div>
+                  </div>
+                </div>
+
+                <!-- item #4 -->
+                <div class="item hover">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-purple">
+                        <img src="images/icons/heart-solid-full.png" alt="" />
+                      </div>
+                      <div>
+                        <p class="f14 w500">العناية الشخصية</p>
+                        <p class="f12 w600 gray">الميزانية: 1500 جنية</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">1200 جنية</p>
+                        <div class="Pill bg-yellow m8">
+                          <span class="f12 w500 yellow">متبقي 20%</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bg-gray width100">
+                    <div class="bg-dark-purple width80"></div>
+                  </div>
+                </div>
+
+                <!-- item #5 -->
+                <div class="item hover">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-green">
+                        <img
+                          src="images/icons/cart-shopping-solid-full-green.png"
+                          alt=""
+                        />
+                      </div>
+                      <div>
+                        <p class="f14 w500">مستلزمات المنزل</p>
+                        <p class="f12 w600 gray">الميزانية: 5000 جنية</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">4300 جنية</p>
+                        <div class="Pill bg-green m8">
+                          <span class="f12 w500 green">متبقي 14%</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="bg-gray width100">
+                    <div class="bg-green3 width80"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- income-vs-expenses-card -->
+            <div class="income-vs-expenses card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">الدخل مقابل المصروفات</h3>
+                <a href="" class="gray">
+                  <span>التحليل</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+
+              <div class="flex flex-center gap-16 m48">
+                <div class="flex flex-center gap-8">
+                  <div class="bg-green3 width-12x12"></div>
+                  <span class="f12 w500 gray">الدخل</span>
+                </div>
+                <div class="flex flex-center gap-8">
+                  <div class="bg-red width-12x12"></div>
+                  <span class="f12 w500 gray">المصروفات</span>
+                </div>
+              </div>
+
+              <div class="chart-grouped flex flex-evenly gap-16">
+                <!-- chart #1 -->
+                <div class="chart">
+                  <div class="flex flex-center">
+                    <div class="bg-green3 width-16x120 border-radius-3"></div>
+                    <div class="bg-red width-16x40 border-radius-3"></div>
+                  </div>
+                  <p class="f12 w500 gray">الأسبوع 1</p>
+                </div>
+
+                <!-- chart #2 -->
+                <div class="chart">
+                  <div class="flex flex-center">
+                    <div class="bg-green3 width-16x120 border-radius-3"></div>
+                    <div class="bg-red width-16x40 border-radius-3"></div>
+                  </div>
+                  <p class="f12 w500 gray">الأسبوع 2</p>
+                </div>
+
+                <!-- chart #3 -->
+                <div class="chart">
+                  <div class="flex flex-center">
+                    <div class="bg-green3 width-16x120 border-radius-3"></div>
+                    <div class="bg-red width-16x40 border-radius-3"></div>
+                  </div>
+                  <p class="f12 w500 gray">الأسبوع 3</p>
+                </div>
+
+                <!-- chart #4 -->
+                <div class="chart">
+                  <div class="flex flex-center">
+                    <div class="bg-green3 width-16x120 border-radius-3"></div>
+                    <div class="bg-red width-16x40 border-radius-3"></div>
+                  </div>
+                  <p class="f12 w500 gray">الأسبوع 4</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- payment-methods-card -->
+            <div class="payment card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">وسائل الدفع</h3>
+                <a href="" class="gray">
+                  <span>إدارة</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+
+              <!-- visa cards -->
+              <div class="visaCards">
+                <!-- visa #1 -->
+                <div class="visa bg-blue">
+                  <div class="flex">
+                    <div class="flex flex-center">
+                      <div></div>
+                    </div>
+                    <div class="icon">
+                      <img
+                        src="images/icons/cc-visa-brands-solid-full.png"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <p>•••• •••• •••• 4532</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- account-summary-card -->
+            <div class="account card">
+              <!-- title -->
+              <div class="title">
+                <h3 class="f18 w600">ملخص الحساب</h3>
+                <a href="" class="gray">
+                  <span>التفاصيل</span>
+                  <i class="fa-solid fa-chevron-left"></i>
+                </a>
+              </div>
+
+              <!-- items -->
+              <div class="items">
+                <!-- item #1 -->
+                <div class="item">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-blue">
+                        <img
+                          src="images/icons/building-columns-solid-full.png"
+                          alt=""
+                        />
+                      </div>
+                      <div>
+                        <p class="f14 w500">حساب جاري</p>
+                        <p class="f12 w600 gray">بنك مصر [•••• 4532]</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">8,450 جنية</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- item #2 -->
+                <div class="item">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-gray">
+                        <img src="images/icons/piggy-bank-solid.png" alt="" />
+                      </div>
+                      <div>
+                        <p class="f14 w500">حساب التوفير</p>
+                        <p class="f12 w600 gray">بنك مصر [•••• 8401]</p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="w500 m8">297,540 جنية</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- item #3 -->
+                <div class="item">
+                  <div class="iconText flex">
+                    <div class="flex">
+                      <div class="icon bg-light-purple">
+                        <img
+                          src="images/icons/credit-card-solid-full-violet.png"
+                          alt=""
+                        />
+                      </div>
+                      <div>
+                        <p class="f14 w500">بطاقة ائتمان</p>
+                        <p class="f12 w600 gray">
+                          متاح: 1,850 جنية من 2,500 جنية
+                        </p>
+                      </div>
+                    </div>
+                    <div class="text">
+                      <div>
+                        <p class="red w500 m8">- 6,000 جنية</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
